force-app/main/default/objects/pedidoDigitado__c/pedidoDigitado__c.object-meta.xml
<CustomObject>
    <description>Objeto para acompanhamento de pedido digitados.</description>
    <label>Pedido Digitado</label>
    <nameField>
        <label>Pedido Marketplace</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pedidos Digitados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>