force-app/main/default/objects/pedidoDigitado__c/fields/acao__c.field-meta.xml
<CustomField>
    <fullName>acao__c</fullName>
    <description>Ação que o atendimento deverá fazer para o pedido não integrado.</description>
    <label>Ação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelar</fullName>
            </value>
            <value>
                <fullName>Digitar pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>