force-app/main/default/objects/pedidoDigitado__c/fields/canal__c.field-meta.xml
<CustomField>
    <fullName>canal__c</fullName>
    <description>Canal que o pedido pertence.</description>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>B2W</fullName>
            </value>
            <value>
                <fullName>Buscapé</fullName>
            </value>
            <value>
                <fullName>Carrefour</fullName>
            </value>
            <value>
                <fullName>Cnova</fullName>
            </value>
            <value>
                <fullName>Dafiti</fullName>
            </value>
            <value>
                <fullName>Magazine Luíza</fullName>
            </value>
            <value>
                <fullName>Record TV</fullName>
            </value>
            <value>
                <fullName>Shopfácil</fullName>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>