force-app/main/default/objects/pedidoDigitado__c/fields/dataPedido__c.field-meta.xml
<CustomField>
    <fullName>dataPedido__c</fullName>
    <description>Data em que o pedido foi realizado.</description>
    <label>Data do pedido</label>
    <type>DateTime</type>
</CustomField>