force-app/main/default/objects/pedidoDigitado__c/fields/enviadoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>enviadoNotaFiscal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se foi enviado nota fiscal ou não</description>
    <label>Enviado nota fiscal</label>
    <type>Checkbox</type>
</CustomField>