force-app/main/default/objects/pedidoDigitado__c/fields/informadoRastreio__c.field-meta.xml
<CustomField>
    <fullName>informadoRastreio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se já foi informado o rastreio no portal do marketplace.</description>
    <label>Informado rastreio</label>
    <type>Checkbox</type>
</CustomField>