force-app/main/default/objects/pedidoDigitado__c/fields/pedidoDigitado__c.field-meta.xml
<CustomField>
    <fullName>pedidoDigitado__c</fullName>
    <description>Pedido digitado no ábacos.</description>
    <label>Pedido digitado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>