force-app/main/default/objects/pedidoDigitado__c/fields/pedidoFinalizado__c.field-meta.xml
<CustomField>
    <fullName>pedidoFinalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o processo do pedido já foi finalizado no marketplace.</description>
    <label>Pedido finalizado</label>
    <type>Checkbox</type>
</CustomField>