force-app/main/default/objects/pedidoDigitado__c/fields/rastrear__c.field-meta.xml
<CustomField>
    <fullName>rastrear__c</fullName>
    <description>Rastreamento do pedido.</description>
    <formula>IF( rastreio__c != &#39;&#39;,
 HYPERLINK(&#39;http://r.connectparts.com.br/?c=&#39; + rastreio__c, &#39;Rastrear&#39; , &#39;_blank&#39;) ,
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rastrear</label>
    <type>Text</type>
</CustomField>