force-app/main/default/objects/pedidoDigitado__c/fields/rastreio__c.field-meta.xml
<CustomField>
    <fullName>rastreio__c</fullName>
    <description>Rastreio do pedido digitado.</description>
    <label>Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>