force-app/main/default/objects/pedidoDigitado__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Status do pedido.</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>