force-app/main/default/objects/pedidoDigitado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pedidoDigitado__c</columns>
    <columns>dataPedido__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>