force-app/main/default/objects/pedidoDigitado__c/listViews/Ouvidoria_Em_aberto.listView-meta.xml
<ListView>
    <fullName>Ouvidoria_Em_aberto</fullName>
    <columns>NAME</columns>
    <columns>pedidoDigitado__c</columns>
    <columns>dataPedido__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pedidoDigitado__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>pedidoFinalizado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Ouvidoria - Em aberto</label>
</ListView>