force-app/main/default/objects/pedidoDigitado__c/listViews/Ouvidoria_Finalizados.listView-meta.xml
<ListView>
    <fullName>Ouvidoria_Finalizados</fullName>
    <columns>NAME</columns>
    <columns>pedidoDigitado__c</columns>
    <columns>dataPedido__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pedidoDigitado__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>pedidoFinalizado__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ouvidoria - Finalizados</label>
</ListView>